--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "checkboxesTest1.js",
   "scripts": {
     "test:chrome": "testcafe chrome ./tests --reporter json -s takeOnFails=true",
+    "test:chrome:xunit": "testcafe chrome ./tests --reporter xunit",
     "test:chrome:headless": "testcafe chrome:headless ./tests -s takeOnFails=true",
     "test:chrome:parallel:headless": "testcafe -c 2 chrome:headless ./tests -s takeOnFails=true",
     "test:firefox": "testcafe firefox ./tests -s takeOnFails=true",
@@ -16,6 +17,8 @@
   "author": "Nikhil Rao",
   "license": "ISC",
   "dependencies": {
-    "testcafe": "^3.6.1"
+    "testcafe": "^3.6.1",
+    "testcafe-reporter-json": "^2.2.0",
+    "testcafe-reporter-xunit": "^2.2.3"
   }
 }
